--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier . --check"
+    "format": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -21,6 +22,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "husky": "^8.0.0"
   }
 }
