Configured lint-staged

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
   "arrowParens": "always",
-  "bracketLine": false,
+  "bracketSameLine": false,
   "bracketSpacing": true,
   "endOfLine": "lf",
   "htmlWhitespaceSensitivity": "css",
