--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
     "format": "prettier --write .",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --config ./.prettierrc.json --write"
+    ],
+    "**/*.{css,scss,md,html,json}": [
+      "prettier --config ./.prettierrc.json --write"
+    ]
+  },
   "dependencies": {
+    "lint-staged": "^13.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,8 +31,8 @@
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
-    "typescript": "4.8.4",
-    "husky": "^8.0.0"
+    "typescript": "4.8.4"
   }
 }
