--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^7.6.2",
     "lint-staged": "^13.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
