--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "axios": "^1.1.3",
+    "coingecko-api": "^1.0.10",
     "framer-motion": "^7.6.2",
     "lint-staged": "^13.0.3",
     "next": "12.3.1",
