--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "coingecko-api": "^1.0.10",
     "framer-motion": "^7.6.2",
     "lint-staged": "^13.0.3",
+    "mongodb": "^4.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
