--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "strict": true,
     "target": "ES6"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/mongodb.js"],
   "exclude": ["node_modules"]
 }
