--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.10.5",
     "axios": "^1.1.3",
     "coingecko-api": "^1.0.10",
+    "css-doodle": "^0.30.7",
     "framer-motion": "^7.6.2",
     "lint-staged": "^13.0.3",
     "mongodb": "^4.11.0",
