--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mongodb": "^4.11.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recharts": "^2.1.16"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
