--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "axios": "^1.1.3",
     "coingecko-api": "^1.0.10",
     "css-doodle": "^0.30.7",
+    "dayjs": "^1.11.6",
     "framer-motion": "^7.6.2",
+    "lightweight-charts": "^3.8.0",
     "lint-staged": "^13.0.3",
     "mongodb": "^4.11.0",
     "next": "12.3.1",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
+    "@types/numeral": "^2.0.2",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
