--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "next": "12.3.1",
     "numeral": "^2.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
